--- a/README
+++ b/README
@@ -16,7 +16,7 @@ Test:
 Progress:
 	beg/end calculation: done
 	fork/exec/waitpid/-x(execute, or dry print): done
-	-r(reverse, for /etc/rc.shutdown):
+	-r(reverse, for /etc/rc.shutdown): done
 	self modification:
 	update document:
 
