--- a/README
+++ b/README
@@ -12,11 +12,11 @@ Test:
 	env ARG0=\? ARG1=stop ./rcexecr -r /etc/rc.d/*
 
 	#add -x to actually execute
-	./rcexecr -x testcase/rc.d/*
+	env ARG0=\? ./rcexecr -x testcase/rc.d/*
 
 	#test self modification
 	chmod -R 755 testcase/
-	./rcexecr -x testcase/rc.d/*
+	env ARG0=\? ./rcexecr -x testcase/rc.d/*
 
 Progress:
 	beg/end calculation: done
