--- a/rcexecr.8
+++ b/rcexecr.8
@@ -1,4 +1,4 @@
-.\"	$NetBSD: rcorder.8,v 1.3 2000/07/17 14:16:22 mrg Exp $
+.\"	$NetBSD: rcexecr.8,v 1.3 2000/07/17 14:16:22 mrg Exp $
 .\"
 .\" Copyright (c) 1998
 .\" 	Perry E. Metzger.  All rights reserved.
@@ -31,22 +31,24 @@
 .\"
 .\" $FreeBSD$
 .\"
-.Dd June 9, 2008
-.Dt RCORDER 8
+.Dd June 5, 2011
+.Dt RCEXECR 8
 .Os
 .Sh NAME
-.Nm rcorder
-.Nd print a dependency ordering of interdependent files
+.Nm rcexecr
+.Nd determine dependency ordering of interdependent files
 .Sh SYNOPSIS
 .Nm
 .Op Fl k Ar keep
 .Op Fl s Ar skip
+.Op Fl r
+.Op Fl x
 .Ar
 .Sh DESCRIPTION
 The
 .Nm
-utility is designed to print out a dependency ordering of a set of
-interdependent files.
+utility is designed to print out, or execute a dependency ordering of a set of
+interdependent files, in parallel.
 Typically it is used to find an execution
 sequence for a set of shell scripts in which certain files must be
 executed before others.
@@ -104,6 +106,10 @@ Add the specified keyword to the
 If any
 .Fl s
 option is given, files containing the matching keyword are not listed.
+.It Fl r
+Reverse the timeline
+.It Fl x
+Execute files instead of printing schedule
 .El
 .Pp
 An example block follows:
@@ -133,6 +139,30 @@ There must be at least one file with no dependencies in the set of
 arguments passed to
 .Nm
 in order for it to find a starting place in the dependency ordering.
+.Sh COMMAND PATTERN
+The
+.Nm
+utility takes environment variable ARG%d (started from 0) as command pattern, the 
+last "?" will be replaced by filename.
+.El
+.Pp
+An example follows:
+.Bd -literal -offset indent
+env ARG0=\\? ARG1=start rcexecr -x /etc/rc.d/*
+.Ed
+.Pp
+executes files in /etc/rc.d/ with argument "start"
+.Sh SELF MODIFICATION
+The
+.Nm
+utility open a pipe and put the fd of the write end to environment variable 
+.Dq Li RCEXECR
+, if a descent
+.Nm
+sees that variable, it will send items to the pipe, then exit. On the 
+other size, the ancestral 
+.Nm
+, on receiving the items, it will merge them, then finish the work.
 .Sh DIAGNOSTICS
 The
 .Nm
@@ -157,14 +187,16 @@ processing the stated file.
 .Sh HISTORY
 The
 .Nm
-utility first appeared in
+utility was modified from rcorder(8) which first appeared in
 .Nx 1.5 .
 .Sh AUTHORS
 .An -nosplit
 Written by
 .An Perry E. Metzger Aq perry@piermont.com
+,
+.An Matthew R. Green Aq mrg@eterna.com.au
 and
-.An Matthew R. Green Aq mrg@eterna.com.au .
+.An Kuan-Chung Chiu <buganini@gmail.com>
 .Sh BUGS
 The
 .Dq Li REQUIRE
