--- a/rcexecr.8
+++ b/rcexecr.8
@@ -31,7 +31,7 @@
 .\"
 .\" $FreeBSD$
 .\"
-.Dd June 5, 2011
+.Dd June 6, 2011
 .Dt RCEXECR 8
 .Os
 .Sh NAME
@@ -91,6 +91,12 @@ and
 lines may appear, but all such lines must appear in a sequence without
 any intervening lines, as once a line that does not follow the format
 is reached, parsing stops.
+Note that for historical reasons,
+.Dq Li REQUIRES ,
+.Dq Li PROVIDES ,
+and
+.Dq Li KEYWORDS
+are also accepted in addition to the above.
 .Pp
 The options are as follows:
 .Bl -tag -width indent
