add some comment to todos

--- a/README
+++ b/README
@@ -65,5 +65,5 @@ Concept:
 			which exit() directly.
 
 Todo:
-	zombieskiller
-	vfork
+	zombieskiller (but this need another mapping and lookup)
+	vfork (but most system has COWed fork())
